--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -14,32 +14,39 @@
     "work.title": "Experiencia Laboral",
     "work.name1": "Prexto Financial Services",
     "work.brief_1": "Diseñé modelos financieros para calcular intereses ordinarios y moratorios, optimizando el rendimiento de la base de datos con pipelines de agregación en MongoDB. Mejoré la arquitectura de microservicios, integré mecanismos de autenticación segura (JWT y OAuth2) y configuré pipelines CI/CD para despliegues automatizados. También administré almacenamiento seguro en AWS S3 para datos financieros críticos.",
-    "work.month_1": "Marzo",
+    "work.month_1": "Marzo 2023 - Actual",
     "work.brief_2": "Diseñé e implementé soluciones de software a medida, optimizando sistemas heredados mediante la modernización de código y la implementación de procedimientos almacenados eficientes, logrando una reducción del 30% en el tiempo de ejecución. Desarrollé APIs para la integración fluida de sistemas de terceros y mejoré el rendimiento de bases de datos relacionales, asegurando escalabilidad, integridad de datos y alta disponibilidad.",
     "work.month_2": "Enero 2023 - Marzo 2023",
     "work.brief_3": "Desarrollé dashboards interactivos y reportes mensuales de rendimiento, integrando datos financieros y operativos. Automatizé la consolidación de datos para generar estados financieros y realicé análisis de variaciones entre presupuestos y resultados reales, proporcionando insights clave a través de visualizaciones avanzadas.",
     "work.month_3": "Junio 2021 - Enero 2023",
+    "projects.title": "Proyectos",
     "project.link1": "https://costume-app.vercel.app/",
-    "project.title1":"DisguiseMe - ONLINE",
-    "project.description1_1":"Desarrolle una aplicación que utiliza los servicios de cloudinary de transformacion de imagenes, el servicio estará disponible hasta el 01/11/2024.",
-    "project.description1_2":"Como una plataforma de vanguardia diseñada para agilizar la experiencia del usuario con una funcionalidad sin fisuras y un diseño UI/UX moderno, utilize zustand para el manejo de estados globales.",
-    "project.description1_3":"Integra tecnologías avanzadas como Vite para el frontend y Python en el backend, la aplicación garantiza una interacción óptima en todos los dispositivos.",
-    "project.urlback1":"https://github.com/LuisAguilarDev/costume_yourself_api",
-    "project.urlfront1":"https://github.com/LuisAguilarDev/costume-app",
+    "project.title1": "DisguiseMe - ONLINE",
+    "project.description1_1": "Desarrolle una aplicación que utiliza los servicios de cloudinary de transformacion de imagenes, el servicio estará disponible hasta el 01/11/2024.",
+    "project.description1_2": "Como una plataforma de vanguardia diseñada para agilizar la experiencia del usuario con una funcionalidad sin fisuras y un diseño UI/UX moderno, utilize zustand para el manejo de estados globales.",
+    "project.description1_3": "Integra tecnologías avanzadas como Vite para el frontend y Python en el backend, la aplicación garantiza una interacción óptima en todos los dispositivos.",
+    "project.urlback1": "https://github.com/LuisAguilarDev/costume_yourself_api",
+    "project.urlfront1": "https://github.com/LuisAguilarDev/costume-app",
     "project.title2": "Eagle Clothes - ONLINE - DEPRECATED",
     "project.link2": "https://eagleclothes.vercel.app/",
-    "project.description2_1":"Desarrollé el proyecto siguiendo la metodología ágil SCRUM. Se trata de una aplicación web de compra de ropa que permite al usuario buscar y filtrar prendas, así como acceder a su panel de usuario mediante un login creado por mí utilizando MongoDB y Bcrypt.",
-    "project.description2_2":"Utilicé React, useReducer para el manejo de estados globales, Material UI y SASS para el estilo, MongoDB, Express y Typescript. También creé las rutas en el backend con Express y utilicé Mongoose para filtrar los datos que recibe el frontend.",
-    "project.description2_3":"El backend tarda en levantar puede parecer roto",
-    "project.urlback2":"https://github.com/LuisAguilarDev/EagleClothes-Backend",
-    "project.urlfront2":"https://github.com/LuisAguilarDev/eagleclothes",
+    "project.description2_1": "Desarrollé el proyecto siguiendo la metodología ágil SCRUM. Se trata de una aplicación web de compra de ropa que permite al usuario buscar y filtrar prendas, así como acceder a su panel de usuario mediante un login creado por mí utilizando MongoDB y Bcrypt.",
+    "project.description2_2": "Utilicé React, useReducer para el manejo de estados globales, Material UI y SASS para el estilo, MongoDB, Express y Typescript. También creé las rutas en el backend con Express y utilicé Mongoose para filtrar los datos que recibe el frontend.",
+    "project.description2_3": "El backend tarda en levantar puede parecer roto",
+    "project.urlback2": "https://github.com/LuisAguilarDev/EagleClothes-Backend",
+    "project.urlfront2": "https://github.com/LuisAguilarDev/eagleclothes",
     "project.title3": "Dog Breeds - DEPRECATED",
-    "project.description3_1":"Fue mi primer proyecto con JavaScript, se trataba de una aplicación web que permitía a los usuarios buscar razas de perros por su nombre y filtrar por temperamento.",
-    "project.description3_2":"Utilicé Redux para el manejo de estados globales y CSS puro para el estilo.",
-    "project.description3_3":"En el backend, utilicé Express para crear las rutas y PostgreSQL y Sequelize para filtrar los datos que se enviarían al frontend.",
-    "project.description3_4":"Aunque esta deprecado pueden ver el codigo en github sobre la implementacion",
-    "project.urlback3":"https://github.com/LuisAguilarDev/DogBreeds/tree/main/api",
-    "project.urlfront3":"https://github.com/LuisAguilarDev/DogBreeds/tree/main/client"
+    "project.description3_1": "Fue mi primer proyecto con JavaScript, se trataba de una aplicación web que permitía a los usuarios buscar razas de perros por su nombre y filtrar por temperamento.",
+    "project.description3_2": "Utilicé Redux para el manejo de estados globales y CSS puro para el estilo.",
+    "project.description3_3": "En el backend, utilicé Express para crear las rutas y PostgreSQL y Sequelize para filtrar los datos que se enviarían al frontend.",
+    "project.description3_4": "Aunque esta deprecado pueden ver el codigo en github sobre la implementacion",
+    "project.urlback3": "https://github.com/LuisAguilarDev/DogBreeds/tree/main/api",
+    "project.urlfront3": "https://github.com/LuisAguilarDev/DogBreeds/tree/main/client",
+    "about.title": "Sobre mí",
+    "about.content1": "Mi camino comenzó en el mundo de la economía y el análisis de datos, donde perfeccioné mis habilidades para resolver problemas y construí modelos financieros. Esta sólida base en finanzas me llevó de forma natural a descubrir una pasión por la tecnología, donde ahora me destaco creando soluciones web escalables y de alto rendimiento.",
+    "about.content2": "Me especializo en tecnologías de JavaScript como Angular, React y Node.js, y tengo un profundo conocimiento de MongoDB, SQL y APIs RESTful. Mi experiencia financiera me brinda una perspectiva única al desarrollar aplicaciones, especialmente en áreas como fintech, toma de decisiones basada en datos y optimización de rendimiento.",
+    "about.content3": "Algunos de mis logros recientes incluyen: desarrollar modelos financieros complejos para análisis de riesgo crediticio y cálculo de tasas de interés utilizando Node.js y MongoDB. Optimizar el rendimiento del software mediante la implementación de arquitectura de microservicios que mejoró la confiabilidad y escalabilidad.",
+    "about.content4": "Construir sistemas de autenticación seguros utilizando OAuth2 y JWT para garantizar la protección de datos. Disfruto combinar mi mentalidad analítica con la creatividad para construir soluciones significativas. Ya sea programando un servicio robusto de backend o diseñando un frontend amigable, me esfuerzo por entregar aplicaciones seguras, escalables y de alta calidad.",
+    "skills.title": "Habilidades Tecnicas"
   }
 }
 
